# umlars-translator

./: .env.dev  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
docs/: features.md  index.md  umj-json-schema.json  umj-schema.json
docs/code_reference/: reference.md
sample/: sample_1.xml
src/umlars_translator/: __init__.py  bootstrap.py  config.py  extensions_manager.py  logger.py
src/umlars_translator/__trash/: data_source.py
src/umlars_translator/app/: config.py  consumer.py  exceptions.py  main.py  repository.py
src/umlars_translator/app/dtos/: input.py  messages.py  uml_model.py
src/umlars_translator/app/services/: models_translator.py
src/umlars_translator/app/utils/: service_connector.py
src/umlars_translator/cli/: cli_manager.py
src/umlars_translator/core/: bootstrap.py  config.py  extensions_manager.py  translator.py
src/umlars_translator/core/configuration/: config_namespace.py  config_proxy.py
src/umlars_translator/core/deserialization/: bootstrap.py  config.py  data_source.py  deserializer.py  exceptions.py  factory.py  input_processor.py
src/umlars_translator/core/deserializer/: config.py
src/umlars_translator/core/model/: __init__.py  (+4 more)
tests/app/: conftest.py  test_get_model_by_id.py  test_message_consumer.py  test_post_model.py  test_x.py
tests/core/: test_translator.py
tests/core/deserializer/: main_test.py  test_model_representation_reader.py
tests/core/model/: test_umlars_builder.py  test_umlars_model.py
tests/core/serializer/: test_json_serializer.py
(+74 files in other folders)
